# ChangeLog for dev-perl/Email-Simple
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.71 2013/09/13 05:49:16 patrick Exp $

*Email-Simple-2.202 (13 Sep 2013)

  13 Sep 2013; Patrick Lauer <patrick@gentoo.org> +Email-Simple-2.202.ebuild:
  Bump

*Email-Simple-2.201.0 (15 Aug 2013)

  15 Aug 2013; Patrick Lauer <patrick@gentoo.org> +Email-Simple-2.201.0.ebuild:
  Bump

  06 Jan 2013; Torsten Veller <tove@gentoo.org> -Email-Simple-2.101.0.ebuild:
  Cleanup

  22 Nov 2012; Agostino Sarubbo <ago@gentoo.org> Email-Simple-2.102.0.ebuild:
  Stable for x86, tested by Vincent Olivert Riera <peratu@carrosses.com>, wrt
  bug #433247

  11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> Email-Simple-2.102.0.ebuild:
  Stable for amd64, wrt bug #433247

  11 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
  Email-Simple-2.102.0.ebuild:
  stable ppc64, bug #433247

  10 Oct 2012; Brent Baude <ranger@gentoo.org> Email-Simple-2.102.0.ebuild:
  Marking Email-Simple-2.102.0 ppc for bug 433247

  02 Sep 2012; Torsten Veller <tove@gentoo.org> -Email-Simple-2.100.0.ebuild:
  Cleanup

  27 Aug 2012; Raúl Porcel <armin76@gentoo.org> Email-Simple-2.100.0.ebuild,
  Email-Simple-2.101.0.ebuild, Email-Simple-2.102.0.ebuild:
  Drop alpha/ia64/sparc keywords

  09 Aug 2012; Brent Baude <ranger@gentoo.org> Email-Simple-2.101.0.ebuild:
  Marking Email-Simple-2.101.0 ppc for bug 418809

  07 Aug 2012; Brent Baude <ranger@gentoo.org> Email-Simple-2.101.0.ebuild:
  Marking Email-Simple-2.101.0 ppc64 for bug 418809

  03 Aug 2012; Agostino Sarubbo <ago@gentoo.org> Email-Simple-2.101.0.ebuild:
  Stable for amd64, wrt bug #418809

  01 Aug 2012; Jeff Horelick <jdhore@gentoo.org> Email-Simple-2.101.0.ebuild:
  marked x86 per bug 418809

*Email-Simple-2.102.0 (13 Jul 2012)

  13 Jul 2012; Torsten Veller <tove@gentoo.org> +Email-Simple-2.102.0.ebuild:
  Version bump
