@@ -1,8 +1,8 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/Email-Simple-2.202.ebuild,v 1.1 2013/09/13 05:49:16 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/Email-Simple-2.202.ebuild,v 1.2 2014/02/21 19:34:13 zlogene Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=RJBS
 MODULE_VERSION=2.202
