@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Email-Simple
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.71 2013/09/13 05:49:16 patrick Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.72 2014/02/21 19:34:13 zlogene Exp $
+
+  21 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> Email-Simple-2.202.ebuild:
+  bump to EAPI=5
 
 *Email-Simple-2.202 (13 Sep 2013)
 
